update create_event and update_event

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,29 @@
-/* Основні стилі */
+/* скрол для усіх */
+/* Chrome, Edge, Safari */
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(
+            180deg,
+            #fcd402,
+            #ffb700
+    );
+    border-radius: 10px;
+}
+
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #ffb700 transparent;
+}
+
 
 
 /* === ОСНОВНІ КОЛЬОРИ === */
