--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -262,14 +262,23 @@
     gap: 12px;
 }
 
-/* scrollbar */
-.comments-list::-webkit-scrollbar {
-    width: 6px;
-}
-.comments-list::-webkit-scrollbar-thumb {
-    background: rgba(255,255,255,0.2);
-    border-radius: 10px;
-}
+/*!* scrollbar *!*/
+/*.comments-list::-webkit-scrollbar{*/
+/*    width: 6px;*/
+/*}*/
+
+/*.comments-list::-webkit-scrollbar-track {*/
+/*    background: transparent;*/
+/*}*/
+
+/*.comments-list::-webkit-scrollbar-thumb {*/
+/*    background: linear-gradient(*/
+/*            180deg,*/
+/*            #fcd402,*/
+/*            #ffb700*/
+/*    );*/
+/*    border-radius: 10px;*/
+/*}*/
 
 
 .comment {
