--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -523,7 +523,7 @@
     min-height: 4em;
     max-height: 4em;
 }
-.event-actions {
+.event-profile-actions {
     display: flex;
     gap: 10px;
     margin-top: auto;
@@ -542,7 +542,7 @@
 
 /* Загальні стилі кнопок */
 .btn-view, .btn-edit, .btn-delete {
-    padding: 10px 16px;
+    padding: 10px 2px;
     border: none;
     border-radius: 8px;
     font-size: 14px;
