--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -467,8 +467,15 @@
     }
 
     .profile-actions {
+        display: flex;
+        gap: 6px;
+        flex-wrap: nowrap;
+    }
+
+    .profile-name-stats {
+        display: flex;
         flex-direction: column;
-        gap: 10px;
+        align-items: flex-start;
     }
 
     .btn-edit-profile,
@@ -491,6 +498,15 @@
         padding: 9px 12px;
         font-size: 13px;
         text-align: center;
+    }
+    .profile-avatar-name-stats {
+        background: #00082a26;
+        border: 1px solid rgb(0 36 255 / 17%);
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 7px;
+        width: 100%;
     }
 }
 
